--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,8 +1,8 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    background-color: #e7e7e7;
+    background-color: #ececec;
     padding: 10px 20px;
     transition: background-color 0.3s;
 }
@@ -15,12 +15,14 @@
     color: gold;
     font-size: 28px;
     font-weight: bold;
-    transition: transform 0.3s;
+    transition: transform 0.3s;    
 }
 
 .logo:hover {
     transform: scale(1.1);
+    cursor: pointer;
 }
+
 
 .nav a {
     color: gold;
