--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .header {
     display: flex;
     justify-content: space-around;
@@ -5,6 +7,7 @@
     background-color: #ececec;
     padding: 10px 20px;
     transition: background-color 0.3s;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header:hover {
