Update dependencies and enhance App structure: - Changed React and React-DOM versions to use caret notation in package-lock.json for better compatibility. - Downgraded TypeScript version from 5.7.2 to 4.9.5 in both package-lock.json files. - Added Main component to App.js for improved application structure. - Updated Header styles: changed background color to white and adjusted logo color for better visibility.

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,18 +4,14 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #ececec;
+    background-color: white;
     padding: 10px 20px;
     transition: background-color 0.3s;
     font-family: 'Roboto', sans-serif;
 }
 
-.header:hover {
-    background-color: #ffffff;
-}
-
 .logo {
-    color: gold;
+    color: #dc831a;
     font-size: 28px;
     font-weight: bold;
     transition: transform 0.3s;    
@@ -28,7 +24,7 @@
 
 
 .nav a {
-    color: gold;
+    color: #dc831a;
     margin-left: 20px;
     text-decoration: none;
     position: relative;
